fetch categories from API instead of using local data

--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -9,5 +9,6 @@
   "gluten_free": "Gluten-free",
   "lactose_free": "Lactose-free",
   "vegan": "Vegan",
-  "vegetarian": "Vegetarian"
+  "vegetarian": "Vegetarian",
+  "error": "Error"
 }
