--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -17,5 +17,6 @@
   "email": "Email",
   "password": "Password",
   "confirm_password": "Confirm Password",
-  "create_account": "Create an Account"
+  "create_account": "Create an Account",
+  "filters_subtitle": "Available Filters / Restrictions"
 }
